--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,16 @@ owner: upptime # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: MLB_ptt
+    url: https://www.ptt.cc/bbs/MLB/index.html
+  - name: youtube
+    url: https://www.youtube.com/
+  - name: maps
+    url: https://www.google.com/maps/@25.0445824,121.5168512,12z
+  - name: news
+    url: https://news.google.com/topstories?hl=zh-TW&gl=TW&ceid=TW:zh-Hant
+  - name: nba_ptt
+    url: https://www.ptt.cc/bbs/NBA/index.html
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
